# space_game.rs

./: .gitignore  Cargo.toml  README.md  build_web.sh  package_web.sh  run_native.sh  run_web.sh
.github/workflows/: main.yml
assets/: asteroid1.glb  asteroid2.glb  bomb.glb  cruiser.glb  cruiser_animations.glb  enemy.glb  shield.glb  space_station.glb  spaceship.glb  turret.glb
assets/shaders/: blink_material.wgsl  cromatic_abberation.wgsl  exhaust.wgsl  outline.wgsl  planet.wgsl  point.wgsl  shield.wgsl  toon.wgsl  toon_bindings.wgsl  toon_functions.wgsl  toon_types.wgsl
blender/: asteroid.blend  bomb.blend  cruiser.blend  enemy.blend  exhaust.blend  shield.blend  space_station.blend  spaceship.blend  turret.blend
locales/: de.yml  en.yml
scripts/: generate_skybox.py
shaders/: point.wgsl
src/: api_constants.rs  components.rs  entities.rs  main.rs  materials.rs  model.rs  particles.rs  postprocessing.rs  states.rs  ui.rs  utils.rs
src/components/: colliders.rs  despawn_after.rs  gravity.rs  health.rs  movement.rs
src/entities/: asteroid.rs  bullet.rs  camera.rs  cruiser.rs  explosion.rs  loading_screen.rs  planet.rs  player.rs  powerup.rs  space_station.rs  spaceship.rs  turret.rs
src/entities/spaceship/: bot.rs  player.rs
src/materials/: blink.rs  exhaust.rs  outline.rs  shield.rs  toon.rs
src/model/: settings.rs
src/particles/: fire_particles.rs
src/postprocessing/: outline.rs
src/states/: exhaust_test.rs  loading_screen.rs  main_scene.rs  pause.rs  start_screen.rs
src/ui/: auxiliary_drive.rs  button.rs  controls.rs  enemy_indicator.rs  fonts.rs  game_hud.rs  game_over.rs  health_bar.rs  health_bar_3d.rs  leaderboard.rs  minimap.rs  node_3d_renderer.rs  score.rs  settings.rs  sprite_3d_renderer.rs  start_screen_ui.rs  theme.rs  widgets.rs
src/utils/: api.rs  asset_loading.rs  clipboard.rs  collisions.rs  materials.rs  math.rs  misc.rs  scene.rs  scene_outline.rs  sets.rs  tasks.rs
