[package]
name = "test_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking", "jpeg", "mp3"] }
bevy_asset_loader = "0.18.0"
bevy_kira_audio = "0.18.0"
bevy_audio = "0.12.1"
bevy_mod_outline = "0.6.2"
rand = "0.8.5"
bevy_rapier3d = { version = "0.23.0", features = ["parallel", "debug-render-3d"]}
bevy_obj = "0.12.0"
bevy_screen_diagnostics = "0.4.0"
bevy_round_ui = "0.1.1"
bytemuck = "1.14.0"
rust-i18n = "3.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
