[package]
name = "test_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.2", features = ["jpeg", "mp3"] }
bevy_asset_loader = { version = "0.20.0", features = ["progress_tracking"]}
bevy_kira_audio = "0.19.0"
bevy_audio = "0.13.2"
bevy_mod_outline = "0.7.0"
rand = "0.8.5"
bevy_rapier3d = { version = "0.25.0", features = ["debug-render-3d"]}
bevy_obj = "0.13.0"
bevy_screen_diagnostics = "0.5.0"
bevy_round_ui = "0.2.0"
iyes_progress = "0.11.0"
bytemuck = "1.14.0"
rust-i18n = "3.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
cfg-if = "1.0.0"
web-sys = "0.3.69"

[workspace]
resolver = "2"

[features]
debug = []

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[profile.release]
lto = true
codegen-units = 1

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[target.wasm32-unknown-unknown.dependencies]
bevy = { version = "0.13.2", features = ["jpeg", "mp3"] }
bevy_rapier3d = { version = "0.25.0", features = ["debug-render-3d", "wasm-bindgen"]}