[package]
name = "test_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.14.2", features = ["jpeg", "mp3"] }
bevy_asset_loader = { version = "0.21.0", features = ["progress_tracking"] }
# bevy_kira_audio = { version = "0.19.0", features = ["wav", "mp3"]}
bevy_audio = "0.14.1"
bevy_mod_outline = "0.8.2"
rand = "0.8.5"
bevy_rapier3d = { version = "0.27.0", features = ["debug-render-3d"] }
bevy_obj = "0.14.0"
bevy_screen_diagnostics = "0.6.0"
bevy_round_ui = "2.0.0"
iyes_progress = "0.12.0"
bytemuck = "1.14.0"
rust-i18n = "3.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
cfg-if = "1.0.0"
web-sys = { version = "0.3.70", features = ["Window", "Storage", "Clipboard", "Navigator"] }
space_game_common = { git = "https://github.com/IchbinLuka/space_game_common.git" }
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
include-crypt = "0.1.1"
async-compat = "0.2.4"
bevy_simple_text_input = "0.9.0"
crossbeam-channel = "0.5.13"
wasm-bindgen = "0.2.92"

[workspace]
resolver = "2"

[features]
debug = []

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[profile.release]
lto = true
codegen-units = 1
strip = "debuginfo"

# Optimize for size in wasm-release mode to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Use release profile as default values.
inherits = "release"
# Optimize with size in mind (also try "s", sometimes it is better).
# This doesn't increase compilation times compared to -O3, great improvements.
opt-level = "z"
# Strip all debugging information from the binary to reduce file size.
strip = "debuginfo"





[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[target.wasm32-unknown-unknown.dependencies]
wasm-bindgen-futures = "0.4.43"
bevy = { version = "0.14.2", features = ["jpeg", "mp3"] }
bevy_rapier3d = { version = "0.27.0", features = [
    "debug-render-3d",
    "wasm-bindgen",
] }


[target.'cfg(not(target_family = "wasm"))'.dependencies]
cli-clipboard = "0.4.0"
